# katai-gpu

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  Makefile  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/models/: schemas.py
backend/src/prompts/: chunk_video.py  semantic_video.py
backend/src/routers/: chat.py  video.py  vision.py
backend/src/services/: fast_video.py  llm.py  video.py  vision.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInput.tsx  Message.tsx  MessageList.tsx  StreamingIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: chat.ts
scripts/: analyze_context.py  audio_analyzer.py  cast_analysis.py  chief_editor.py  chunk_analysis.py  chunk_dispatch.py  color_analyzer.py  director_brain.py  download_model.sh  editor.py  event_builder.py  executor.py  fast_chunk_analysis.py  index_context.py  pipeline.py  query_context.py  requirements.txt  retriever.py  scene_detect.py  semantic_analysis.py  speaker_diarizer.py  start.sh  transcribe.py  video_bench.py  vision_bench.py
tests/: test_chunk_dispatch.py  test_plan_chunks.py
whisper/: Dockerfile  app.py
